Modified math help and reading help, lengthened incorrect reading answers

--- a/exam1.html
+++ b/exam1.html
@@ -1685,11 +1685,15 @@
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q20" id="q20b" value="B">
-                                            <label class="form-check-label" for="q20b">B. Natural disasters</label>
+                                            <label class="form-check-label" for="q20b">B. Natural disasters such as
+                                                hurricanes, tsunamis, and earthquakes that occur periodically in ocean
+                                                regions and can cause temporary disruptions to marine ecosystems</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q20" id="q20c" value="C">
-                                            <label class="form-check-label" for="q20c">C. Underwater volcanoes</label>
+                                            <label class="form-check-label" for="q20c">C. Underwater volcanic activity
+                                                that releases heat and minerals into the ocean, potentially affecting
+                                                water temperature and chemical composition in localized areas</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q20" id="q20d" value="D">
@@ -1702,7 +1706,10 @@
                                             bleaching?</p>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q21" id="q21a" value="A">
-                                            <label class="form-check-label" for="q21a">A. Corals grow larger</label>
+                                            <label class="form-check-label" for="q21a">A. Corals experience rapid growth
+                                                and expansion, increasing in size and mass as they absorb more nutrients
+                                                from the surrounding water and develop stronger skeletal
+                                                structures</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q21" id="q21b" value="B">
@@ -1717,8 +1724,10 @@
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q21" id="q21d" value="D">
-                                            <label class="form-check-label" for="q21d">D. Corals become more resistant
-                                                to disease</label>
+                                            <label class="form-check-label" for="q21d">D. Corals develop enhanced immune
+                                                systems and biological defenses that make them significantly more
+                                                resistant to various diseases, pathogens, and environmental
+                                                stressors</label>
                                         </div>
                                     </div>
 
@@ -1727,11 +1736,16 @@
                                             harder for marine organisms to:</p>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q22" id="q22a" value="A">
-                                            <label class="form-check-label" for="q22a">A. Find food</label>
+                                            <label class="form-check-label" for="q22a">A. Locate and capture food
+                                                sources in their natural habitats, as the changing chemical composition
+                                                of the water interferes with their ability to detect and pursue prey
+                                                effectively</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q22" id="q22b" value="B">
-                                            <label class="form-check-label" for="q22b">B. Reproduce</label>
+                                            <label class="form-check-label" for="q22b">B. Successfully reproduce and
+                                                produce viable offspring, as the altered pH levels disrupt reproductive
+                                                processes and reduce the survival rates of eggs and larvae</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q22" id="q22c" value="C">
@@ -1784,13 +1798,17 @@
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q24" id="q24b" value="B">
-                                            <label class="form-check-label" for="q24b">B. Only affecting large marine
-                                                animals</label>
+                                            <label class="form-check-label" for="q24b">B. Primarily impacting only large
+                                                marine animals such as whales, dolphins, and sea turtles, while having
+                                                minimal or negligible effects on smaller organisms and the broader
+                                                ecosystem</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q24" id="q24c" value="C">
-                                            <label class="form-check-label" for="q24c">C. Improving water
-                                                quality</label>
+                                            <label class="form-check-label" for="q24c">C. Enhancing water quality by
+                                                filtering out harmful substances and providing additional surface area
+                                                for beneficial microorganisms to colonize and improve overall ecosystem
+                                                health</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q24" id="q24d" value="D">
@@ -1959,12 +1977,17 @@
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q28" id="q28b" value="B">
-                                            <label class="form-check-label" for="q28b">B. Large office buildings</label>
+                                            <label class="form-check-label" for="q28b">B. Large office buildings that
+                                                contain multiple floors of workspace for employees, meeting rooms, and
+                                                administrative facilities designed to support business operations and
+                                                corporate activities</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q28" id="q28c" value="C">
-                                            <label class="form-check-label" for="q28c">C. Internet service
-                                                providers</label>
+                                            <label class="form-check-label" for="q28c">C. Companies that provide
+                                                internet connectivity services to residential and business customers,
+                                                managing network infrastructure and delivering broadband access through
+                                                various technologies</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q28" id="q28d" value="D">
@@ -1977,11 +2000,17 @@
                                             organized in:</p>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q29" id="q29a" value="A">
-                                            <label class="form-check-label" for="q29a">A. Large open spaces</label>
+                                            <label class="form-check-label" for="q29a">A. Large open spaces with servers
+                                                arranged freely across expansive floor areas, allowing for maximum
+                                                airflow and easy access to all equipment without structural
+                                                constraints</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q29" id="q29b" value="B">
-                                            <label class="form-check-label" for="q29b">B. Individual rooms</label>
+                                            <label class="form-check-label" for="q29b">B. Individual rooms where each
+                                                server is housed in its own separate, isolated space with dedicated
+                                                environmental controls and security measures for maximum
+                                                protection</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q29" id="q29c" value="C">
@@ -1999,8 +2028,10 @@
                                             cooling systems?</p>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q30" id="q30a" value="A">
-                                            <label class="form-check-label" for="q30a">A. To keep employees
-                                                comfortable</label>
+                                            <label class="form-check-label" for="q30a">A. To maintain comfortable
+                                                working conditions for employees and staff members, ensuring that the
+                                                ambient temperature remains within acceptable ranges for human comfort
+                                                and productivity throughout the facility</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q30" id="q30b" value="B">
@@ -2023,13 +2054,17 @@
                                             backup power systems to:</p>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q31" id="q31a" value="A">
-                                            <label class="form-check-label" for="q31a">A. Reduce electricity
-                                                costs</label>
+                                            <label class="form-check-label" for="q31a">A. Reduce electricity costs by
+                                                supplementing primary power sources with alternative energy generation
+                                                methods that are more cost-effective and environmentally sustainable
+                                                over the long term</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q31" id="q31b" value="B">
-                                            <label class="form-check-label" for="q31b">B. Increase server
-                                                performance</label>
+                                            <label class="form-check-label" for="q31b">B. Increase server performance by
+                                                providing additional electrical capacity that allows servers to operate
+                                                at higher speeds and process more data simultaneously with enhanced
+                                                computational efficiency</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q31" id="q31c" value="C">
