--- a/reading-help.html
+++ b/reading-help.html
@@ -134,6 +134,14 @@
                                 <li>Don't rely on prior knowledge - base answers only on the passage</li>
                                 <li>At the 1 minute remaining mark, I think it's best to start guessing and make sure
                                     that every question is answered.</li>
+                                <li>When guessing, you have two good options. Pick the same letter choice for each
+                                    question (usually B or C), or pick the longest answer. Picking the longest answer if
+                                    it
+                                    seems sensible is an
+                                    old ACT test trick I learned and it has served me pretty well. I don't advise
+                                    guessing or selecting the longest answer when practicing, you're cheating yourself
+                                    out of the practice you need to
+                                    succeed.</li>
                             </ul>
                         </div>
                     </div>
