updated last two questions on exam1

--- a/exam1.html
+++ b/exam1.html
@@ -2168,17 +2168,26 @@
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q35" id="q35a" value="A">
                                             <label class="form-check-label" for="q35a">A. Data centers are simple
-                                                facilities that require minimal maintenance</label>
+                                                facilities that require minimal maintenance, basic infrastructure, and
+                                                straightforward operational procedures, with no need for specialized
+                                                equipment, complex environmental controls, or advanced security measures
+                                                beyond standard building requirements</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q35" id="q35b" value="B">
                                             <label class="form-check-label" for="q35b">B. Data centers are optional for
-                                                modern technology</label>
+                                                modern technology and represent a non-essential luxury that can be
+                                                easily replaced or eliminated without significantly impacting digital
+                                                services, internet functionality, or cloud computing
+                                                capabilities</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q35" id="q35c" value="C">
                                             <label class="form-check-label" for="q35c">C. Data centers can operate
-                                                without specialized infrastructure</label>
+                                                effectively without specialized infrastructure, environmental controls,
+                                                backup power systems, or strategic location considerations, functioning
+                                                just as well in any standard building with basic electrical and cooling
+                                                capabilities</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q35" id="q35d" value="D">
@@ -2206,17 +2215,25 @@
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q36" id="q36b" value="B">
                                             <label class="form-check-label" for="q36b">B. Data center capacity will
-                                                decrease in the future</label>
+                                                decrease in the future as technological demand declines, computing needs
+                                                diminish, and the industry moves toward smaller, less powerful
+                                                facilities that require fewer resources and generate less computational
+                                                output</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q36" id="q36c" value="C">
                                             <label class="form-check-label" for="q36c">C. Efficiency is not important
-                                                for data centers</label>
+                                                for data centers, and there is no need to focus on energy consumption,
+                                                environmental impact, or operational optimization, as these factors have
+                                                minimal relevance to data center performance, costs, or
+                                                sustainability</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="q36" id="q36d" value="D">
                                             <label class="form-check-label" for="q36d">D. Data centers will become
-                                                obsolete</label>
+                                                obsolete as alternative technologies emerge to replace them, rendering
+                                                these facilities unnecessary and leading to their complete elimination
+                                                from the technology infrastructure landscape</label>
                                         </div>
                                     </div>
                                 </div>
