added google analytics

--- a/exam1.html
+++ b/exam1.html
@@ -29,6 +29,16 @@
         content="Complete practice exam for an electrical apprenticeship aptitude test covering both math and reading sections.">
     <meta name="twitter:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GNX2ZHNFF3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-GNX2ZHNFF3');
+    </script>
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
     <!-- Canonical URL -->
