--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Electrical Aptitude Test Prep">
 
+
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://electricalaptitudetestprep.com/">
@@ -29,6 +30,16 @@
     <meta name="twitter:description"
         content="Free practice exams and study resources for an electrical apprenticeship aptitude test. Practice math and reading comprehension questions.">
     <meta name="twitter:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GNX2ZHNFF3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-GNX2ZHNFF3');
+    </script>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
