--- a/practice-reading.html
+++ b/practice-reading.html
@@ -30,6 +30,16 @@
         content="Practice reading comprehension questions for an electrical apprenticeship aptitude test.">
     <meta name="twitter:image" content="https://electricalaptitudetestprep.com/assets/images/aptitude_og_1.png">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GNX2ZHNFF3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-GNX2ZHNFF3');
+    </script>
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
     <!-- Canonical URL -->
