Updated 4 math questions, colored score ranges, added graphs

--- a/about.html
+++ b/about.html
@@ -196,11 +196,18 @@
                                 mechanical aptitude and spatial reasoning, those topics are not covered on this site.
                             </p>
 
+                            <h6 class="mt-4">What is the passing score for the aptitude practice tests?</h6>
+                            <p>A score of 60% or higher indicates that you have a good chance of passing your test, but
+                                is no guarantee. To my knowledge, the testing bodies do not provide their grading
+                                standards so it is impossible for this site to grade you in a similar way. Do your best
+                                to get as high of a score as possible on the practice tests and study what you got
+                                wrong.</p>
+
                             <h6 class="mt-4">How should I use this site to prepare?</h6>
                             <p>I recommend starting with a full practice exam and mimicking the test environment. To do
                                 so, set a timer for 50 minutes for the math portion, and 50 minutes for the reading
                                 portion.
-                                Take a 10 minute break between the two sections.
+                                Take a 10-15 minute break between the two sections.
                                 After completing the full practice exam, review the explanations and study the
                                 strategies on the <a href="math-help.html">Math Help</a> and <a
                                     href="reading-help.html">Reading Help</a> pages.
