--- a/index.html
+++ b/index.html
@@ -175,18 +175,26 @@
                             <h3 class="card-title">What to Expect</h3>
                             <p>A typical electrical apprenticeship aptitude test consists of two main sections:</p>
                             <ul>
-                                <li><strong>Math Section:</strong> 45 minutes of algebra, functions, number series, and
+                                <li><strong>Math Section:</strong> Approximately 45 minutes of algebra, functions,
+                                    number series, and
                                     mathematical
-                                    reasoning. The math sections on this site are a few problems longer than a typical
+                                    reasoning. The math sections on this site are challenging and have a few more
+                                    problems than a typical
                                     test, so they
                                     use a 50
-                                    minute time limit.</li>
+                                    minute time limit. <strong>Your test's time limit will likely be less than 50
+                                        minutes, 46 minutes is standard.</strong> <br> Feel free to set your own 46
+                                    minute
+                                    timer to
+                                    practice, but I'm confident that the 50 minute timer will prepare you well
+                                    enough.
+                                </li>
                                 <li><strong>Reading Comprehension:</strong> 50 minutes of understanding written passages
                                     and answering
                                     questions</li>
                             </ul>
                             <div class="alert alert-warning" role="alert">
-                                <strong>Additional topics and questions types may be tested, so be sure to find out what
+                                <strong>Additional topics and question types may be tested, so be sure to find out what
                                     is on your particular test and practice those types of questions as
                                     well.</strong>
                             </div>
@@ -203,6 +211,12 @@
                                     and
                                     reading question
                                     types ONLY.</strong> </p>
+                            <div class="alert alert-success" role="alert">
+                                <strong>A score of 60% or higher indicates that you have a good chance of passing your
+                                    test, but is no guarantee. To my knowledge, the testing bodies do not provide their
+                                    grading standards so it is impossible for this site to grade you in a similar
+                                    way.</strong>
+                            </div>
                         </div>
                     </div>
                 </div>
