--- a/about.html
+++ b/about.html
@@ -184,10 +184,11 @@
                             <p>I used
                                 an LLM to generate some of the math questions and answers, as well as the reading
                                 passages. I also created a lot of them myself. I
-                                based the format and question types off of my memory of an aptitude test that I took in
-                                2025. I'm not sure if the questions are exactly the same type, but they should be close.
-                                I'm confident that
-                                if you can perform well on these practice exams, you'll do well on the actual test. </p>
+                                based the format and question types off an aptitude test that I took in 2025. I'm not
+                                sure if these questions are exactly the same type as every aptitude test,
+                                but they should be close.
+                                If you can perform well on the practice exams and understand the content, I think you'll
+                                do well on the actual test. </p>
 
                             <h6 class="mt-4">What does a typical electrical apprenticeship aptitude test cover?</h6>
                             <p>An aptitude test typically includes two main sections: mathematics and reading
@@ -217,7 +218,7 @@
                             </p>
 
                             <h6 class="mt-4">I saw a type of question on the test that wasn't on this site!</h6>
-                            <p>Let me know, and I'll add it to the site.</p>
+                            <p>Please let me know, and I'll add it to the site.</p>
                             <h6 class="mt-4">Is this good preparation for the GAN aptitude test?</h6>
                             <p>I'm not familiar with that test, so I would caution against using this site as a resource
                                 to prepare for that test.</p>
