updated to add ibew as keyword

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electrical Aptitude Test Practice - Free Practice Exams </title>
     <meta name="description"
-        content="Free practice exams and study resources for an electrical apprenticeship aptitude test. Practice math and reading comprehension questions.">
+        content="Free practice exams and study resources for an electrical apprenticeship aptitude test. Practice math and reading comprehension questions to prepare for the IBEW test.">
     <meta name="keywords"
         content="electrical aptitude test, apprenticeship test, practice exam, electrical trade, IBEW test prep, free electric aptitude test">
     <meta name="author" content="Electrical Aptitude Test Prep">
@@ -105,8 +105,7 @@
             <div class="hero-section">
                 <h1>Prepare for Your Electrical Aptitude Test</h1>
                 <p>Free practice exams and study resources to help you succeed on a typical math / reading
-                    electrical apprenticeship aptitude
-                    test.
+                    electrical aptitude test, like the one offered by the IBEW.
                 </p>
 
                 <div class="d-flex gap-3 justify-content-center flex-wrap">
@@ -173,7 +172,8 @@
                     <div class="card">
                         <div class="card-body">
                             <h3 class="card-title">What to Expect</h3>
-                            <p>A typical electrical apprenticeship aptitude test consists of two main sections:</p>
+                            <p>A typical electrical apprenticeship aptitude test, like the one offered by the IBEW,
+                                consists of two main sections:</p>
                             <ul>
                                 <li><strong>Math Section:</strong> Approximately 45 minutes of algebra, functions,
                                     number series, and
@@ -271,7 +271,7 @@
                     </div>
 
                     <!-- Donation Section -->
-                    <div class="card mb-4" id="donate">
+                    <div class="card mb-4 mt-4" id="donate">
                         <div class="card-header bg-success text-white">
                             <h5 class="mb-0">Support This Site</h5>
                         </div>
