changed wording of multiple rep problem exam1

--- a/exam1.html
+++ b/exam1.html
@@ -881,7 +881,8 @@
 
                             <!-- Question 31: Statement to other forms -->
                             <div class="question mb-4" data-question="m31" data-correct="C">
-                                <p class="fw-bold">31. The statement "y is 3 times x divided by x plus 5" is equivalent
+                                <p class="fw-bold">31. The statement "y is 3 times x divided by the sume of x and 5" is
+                                    equivalent
                                     to which of the following?</p>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m31" id="m31a" value="A">
